Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-32456

incorrect result of gis function in view protocol

    XMLWordPrintable

Details

    Description

      After removing disabling view protocol found incorrect result of gis finction:

      --- /home/sanja/maria/git/10.4/mysql-test/main/gis.result	2023-10-12 20:35:38.674266836 +0200
      +++ /home/sanja/maria/git/10.4/mysql-test/main/gis.reject	2023-10-12 20:37:25.670497807 +0200
      @@ -698,10 +698,10 @@
       drop table t1;
       select (asWKT(geomfromwkb((0x000000000140240000000000004024000000000000)))) as exp;
       exp
      -POINT(10 10)
      +NULL
       select (asWKT(geomfromwkb((0x010100000000000000000024400000000000002440)))) as exp;
       exp
      -POINT(10 10)
      +NULL
       create table t1 (g GEOMETRY);
       select * from t1;
       Catalog	Database	Table	Table_alias	Column	Column_alias	Type	Length	Max length	Is_null	Flags	Decimals	Charsetnr
      
      

      as test case uncomment disabling of the view protocol marked #enable after MDEV-32456

      Attachments

        Issue Links

          Activity

            People

              rucha174 Rucha Deodhar
              sanja Oleksandr Byelkin
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 10d 7h
                  10d 7h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.